[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.188"
serde_derive = "1.0.188"
sha1 = "0.10.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
actix-web = "4.4.0"
hyper = "0.14"
serde_json = "1.0"

[profile.dev]
opt-level = 0 

[profile.release]
opt-level = 3
